# grid-calculator

./: Cargo.toml  README.md  advanced_config.toml  config_example.toml  simple_config.toml
src/: config.rs  grid_calculator.rs  lib.rs  main.rs
