[package]
name = "grid-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "grid-calculator"
path = "src/main.rs"

[lib]
name = "grid_calculator"
path = "src/lib.rs"
